--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@ body {
 }
 
 .container {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3, 300px);
     gap: 20px;
-    justify-content: center;
+    justify-content: center; /* center seluruh grid */
 }
 
 .card {
