--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 300px);
     gap: 20px;
-    justify-content: center; /* center seluruh grid */
+    justify-content: center;
+}
+
+.container::after {
+    content: "";
 }
 
 .card {
