--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background: red;
+    background: #2f2f2f;
     margin: 0;
     padding: 20px;
     color: white;
