--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 300px);
     gap: 20px;
-    justify-content: center;
+    width: max-content;
+    margin: 0 auto;
 }
 
 .container::after {
